@@ -3,6 +3,5 @@ grammar T;
 s : A # X
   | B
   ;
-b : A # Y
-  | B{}
-  ;
+
+s : A ;
